# Domaintools-Client

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  check_quality.py  config.yaml.example  dt-cli.py  dt.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
domaintools_client/: __init__.py
domaintools_client/api/: __init__.py  client.py  exceptions.py
domaintools_client/cli/: __init__.py  main.py
domaintools_client/cli/commands/: __init__.py  config.py  domain.py  iris.py  monitor.py  reputation.py  reverse.py  search.py  whois.py
domaintools_client/config/: __init__.py  manager.py
domaintools_client/formatters/: __init__.py  output.py
domaintools_client/logging/: __init__.py  logger.py  metrics.py
examples/: basic_usage.py
tests/: __init__.py  conftest.py  test_cli_integration.py  test_client.py  test_config.py  test_formatters.py
tests/benchmarks/: __init__.py  test_performance.py
